--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script type="text/javascript" src="../../../assets/js/jquery-3.1.1.min.js"></script>
+			<script type="text/javascript" src="../../../assets/js/jquery.media.js"></script>
+			<script type="text/javascript">  
+				$(function() {  
+					$('a.media').media({width:1200, height:800});  
+				});
+			</script>
 
 	</body>
 </html>
