--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 									
 									<div>
 										<h2> Review: Proof of Bishop volume comparison theorem with isoperimetric technique</h2>
-										<a class="media" href="resources/essays/Essay_Review_2022.pdf"></a>
+										<a href="resources/essays/Essay_Review_2022.pdf">click this.</a>
 									</div>
 
 						</div>
