--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
               
               <!-- Section -->
                 <section>
+			<p>
+				Education
+				Fudan University         2019-present
+				Major: Mathematics and applied mathematics
+			</p>
 									<header class="main">
 										<h1>Analysis - List of Essays</h1>
 									</header>
