--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
               <!-- Section -->
                 <section>
 			<p>
-				Education
-				Fudan University         2019-present
+				Education: Fudan University         2019-present \\
 				Major: Mathematics and applied mathematics
 			</p>
 									<header class="main">
