--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <!-- Section -->
                 <section>
 			<p>
-				Education: Fudan University         2019-present \\
+				Education: Fudan University         2019-present<br>
 				Major: Mathematics and applied mathematics
 			</p>
 									<header class="main">
@@ -34,7 +34,7 @@
 									
 									<div>
 										<h2> Review: Proof of Bishop volume comparison theorem with isoperimetric technique</h2>
-										<a href="resources/essays/Essay_Review_2022.pdf">click this.</a>
+										<a href="resources/essays/Essay_Review_2022.pdf">click this to veiw the pdf.</a>
 									</div>
 
 						</div>
