--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <!-- Section -->
                 <section>
 			<p>
-				Education: Fudan University         2019-present<br>
+				Education: Undergraduate at Fudan University         2019-present<br>
 				Major: Mathematics and applied mathematics
 			</p>
 									<header class="main">
